<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_search"
            android:id="@+id/buttonRechercher"
            android:onClick="clickOnSearchRooms" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_book"
            android:id="@+id/buttonReserver"
            android:layout_gravity="center_vertical"
            android:onClick="bookRoom"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_management"
            android:id="@+id/buttonGP"
            android:onClick="showManageScreen"
            android:layout_column="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/linearLayout2"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView3"
            android:background="@drawable/sopra"
            android:onClick="showLoginPage"
            android:layout_gravity="right"
            android:contentDescription="buttonToLogin"
            android:backgroundTint="#ffffff"
            android:backgroundTintMode="multiply"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search_rooms"
            android:id="@+id/textViewGI"
            android:gravity="center"
            android:textSize="25sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:background="#78f87217"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:stretchColumns="0"
        android:layout_below="@+id/linearLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_date"
                android:id="@+id/textDateBegin"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editDateBegin"
                android:hint="@string/date_select"
                android:onClick="setDate"
                android:layout_column="1"
                android:layout_span="2"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_time"
                android:id="@+id/textDateFin"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editTimeBegin"
                android:hint="@string/time_select_begin"
                android:onClick="setTimeBegin"
                android:layout_column="1"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/editTimeEnd"
                android:hint="@string/time_select_end"
                android:onClick="setTimeEnd"
                android:layout_column="2"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/textDesc"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/editTextDesc"
                android:layout_column="1"
                android:layout_span="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nb_coworkers"
                android:id="@+id/textNbCollab"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editTextNbCollab"
                android:layout_column="1"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_partic"
                android:id="@+id/textView"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_visio"
                android:id="@+id/checkBoxVisio"
                android:checked="false"
                android:buttonTint="#F87217"
                android:layout_column="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tel"
                android:id="@+id/checkBoxTelephone"
                android:checked="false"
                android:buttonTint="#F87217"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_digilab"
                android:id="@+id/checkBoxDigilab"
                android:checked="false"
                android:buttonTint="#F87217"
                android:layout_column="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_secu"
                android:id="@+id/checkBoxSecurite"
                android:checked="false"
                android:buttonTint="#F87217"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/list_rooms"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:textColor="@android:color/holo_green_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/listAvailableRooms"
                android:choiceMode="singleChoice"
                android:layout_column="0"
                android:layout_span="3"
                android:listSelector="#F87217"
                android:longClickable="true" />
        </TableRow>

    </TableLayout>

</RelativeLayout>