<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/sopra"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_login"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:inputType="text" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editTextLogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:id="@+id/radio_Admin"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
            android:textSize="@dimen/abc_text_size_large_material" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/radio_User"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
            android:textSize="@dimen/abc_text_size_large_material" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/button_login"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:onClick="connectOnclick" />

</RelativeLayout>
